objects/SFDC_Project__c.object
<CustomObject>
    <fields>
        <fullName>Internal_NTP_On_Hold_Days__c</fullName>
        <description>next to the &quot;Internal NTP Baseline&quot;  field in the Flex table</description>
        <label>Internal NTP On Hold Days</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Status__c</fullName>
        <label>Inverter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Defined</fullName>
                </value>
                <value>
                    <fullName>PO Placed</fullName>
                </value>
                <value>
                    <fullName>Borrego Received</fullName>
                </value>
                <value>
                    <fullName>Subcon. Received</fullName>
                </value>
                <value>
                    <fullName>Product On Site</fullName>
                </value>
                <value>
                    <fullName>Install In Progress</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Need to Order</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Kit Issued</fullName>
                </value>
                <value>
                    <fullName>Partial Delivered</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <externalId>true</externalId>
        <label>Job Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lag_50_to_Permit__c</fullName>
        <description>Design Time from 50% to Permit Set - business days</description>
        <formula>(Permit_Set_Completed__c - X50_Set_Completed__c) /7 *5</formula>
        <label>Design Time- 50% to Permit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Status__c</fullName>
        <label>Lease Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Design__c</fullName>
        <formula>(Total_Invoiced_Design2__c- Cost_To_Borrego_Design__c)/ Total_Invoiced_Design2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Feasibility__c</fullName>
        <formula>IF( Not_To_Exceed_Feas__c  &gt; 0  &amp;&amp;  Cost_to_Customer_Feasibility__c  &gt;=  Not_To_Exceed_Feas__c ,
    (Not_To_Exceed_Feas__c  -  Cost_To_Borrego_Feasibility__c)  / 
        Not_To_Exceed_Feas__c  , 
     IF( Fixed_Cost_Feasibility__c ,
        IF( Total_Fixed_Cost_Feasibility__c  = 0,
            0,
            ( Total_Fixed_Cost_Feasibility__c  -  Cost_To_Borrego_Feasibility__c ) / 
                      Total_Fixed_Cost_Feasibility__c ) , 
         IF( Total_To_Invoice_Feasibility__c  = 0,
            0, 
            (Total_To_Invoice_Feasibility__c -  Cost_To_Borrego_Feasibility__c ) / 
            Total_To_Invoice_Feasibility__c  ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Procurement__c</fullName>
        <formula>(Total_Invoiced_Procurement2__c- Cost_To_Borrego_Procurement__c)/ Total_Invoiced_Procurement2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Module_Req_Date__c</fullName>
        <label>Module Req Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_offset__c</fullName>
        <description>Number of days the lead time for modules will be offset</description>
        <label>Module offset lead time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modules_Status__c</fullName>
        <label>Modules Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Defined</fullName>
                </value>
                <value>
                    <fullName>PO Placed</fullName>
                </value>
                <value>
                    <fullName>Borrego Received</fullName>
                </value>
                <value>
                    <fullName>Subcon. Received</fullName>
                </value>
                <value>
                    <fullName>Product On Site</fullName>
                </value>
                <value>
                    <fullName>Install In Progress</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Need to Order</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Kit Issued</fullName>
                </value>
                <value>
                    <fullName>Partial Delivered</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NEC_Code__c</fullName>
        <label>NEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEPOOL_Reg_Approved_Date__c</fullName>
        <label>NEPOOL Reg Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NEPOOL_Reg_Requested_Date__c</fullName>
        <label>NEPOOL Reg Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Rebate section - next steps text field.</description>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed_Design__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not To Exceed (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed_Feas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not To Exceed (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed_Procurement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not To Exceed (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_Federal__c</fullName>
        <label>Notes (Federal)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Buildings__c</fullName>
        <label>Number of Buildings</label>
        <summaryForeignKey>Building__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_SRECs_Traded__c</fullName>
        <label>Number of SRECs Traded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_M_Handoff_Date__c</fullName>
        <label>O&amp;M Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>O_M_Handoff_Status__c</fullName>
        <label>O&amp;M Handoff Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                    <default>true</default>
                    <label>Not Scheduled</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed and Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N300000021XqLEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Payment_Cycle__c</fullName>
        <label>PBI Payment Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cycle 1 (1-30)</fullName>
                </value>
                <value>
                    <fullName>Cycle 2 (15-15)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Code__c</fullName>
        <label>PC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PPM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPM Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPM_Date__c</fullName>
        <label>PPM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <inlineHelpText>Date system received Permission to Operate</inlineHelpText>
        <label>PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Billing_Status_Design__c</fullName>
        <label>Billing Status (Design)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Retainer Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PV_Billing_Status_Procurement__c</fullName>
        <label>Billing Status (Procurement)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Retainer Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PV_Detail_Form_Approved_Date__c</fullName>
        <label>PV Detail Form Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Detail_Form_Submission_Date__c</fullName>
        <label>PV Detail Form Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Notes_Design__c</fullName>
        <label>PV Notes (Design)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PV_Notes_Feasibility__c</fullName>
        <label>PV Notes (Feasibility)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PV_Notes_Procurement__c</fullName>
        <label>PV Notes (Procurement)</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paperwork_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperwork Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Unique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Complete_Design__c</fullName>
        <formula>Cost_to_Customer_Design__c/ Not_To_Exceed_Design__c</formula>
        <label>Percent Complete (Design)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Feasibility__c</fullName>
        <formula>Cost_to_Customer_Feasibility__c/ Not_To_Exceed_Feas__c</formula>
        <label>Percent Complete (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_Procurement__c</fullName>
        <formula>Cost_to_Customer_Procurement__c/ Not_To_Exceed_Procurement__c</formula>
        <label>Percent Complete (Procurement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Perm_count__c</fullName>
        <description>this will be used for reporting only</description>
        <formula>IF(ISBLANK( Permit_on_time__c ) || (Permit_on_time__c &gt;= 0 &amp;&amp;   Permit_Baseline_Date__c  &lt; DATE(2012,08,01)) ,NULL,1)</formula>
        <label>Perm count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Baseline_Date__c</fullName>
        <label>Permit Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Days_from_Baseline_Date__c</fullName>
        <formula>IF( ISBLANK(  Permit_Set_Completed__c), Permit_Baseline_Date__c- TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permit- Days from Baseline Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Forecast_Release_Date__c</fullName>
        <label>Permit Forecast Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_On_Hold_Days__c</fullName>
        <description>next to Permit Baseline in the Flex table</description>
        <label>Permit On Hold Days</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Review_Baseline__c</fullName>
        <label>Permit Review Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Review_Date__c</fullName>
        <label>Permit Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Set_Completed__c</fullName>
        <label>Permit Set Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_on_time__c</fullName>
        <formula>IF(ISBLANK(Permit_Set_Completed__c ) &amp;&amp; (Permit_Baseline_Date__c &lt; TODAY() - 15),0,
IF(Permit_Set_Completed__c -  Permit_Baseline_Date__c  &lt; 15 &amp;&amp;  Permit_Baseline_Date__c &gt; DATE(2012,08,01),1,
IF(ISBLANK(Permit_Set_Completed__c ) ||  ISBLANK(Permit_Baseline_Date__c ),Null,0)))</formula>
        <label>Permit on time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picasa_Album__c</fullName>
        <label>Picasa Album</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pre_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printed_Pick_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Pick Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Printed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_50_Forecast_Date__c</fullName>
        <label>Prior 50% Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_CD_Forecast_Date__c</fullName>
        <label>Prior CD Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Permit_Forecast_Date__c</fullName>
        <label>Prior Permit Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <formula>TEXT( WATTS_STC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage_Change_Date__c</fullName>
        <label>Project Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sub-Contract Install</fullName>
                </value>
                <value>
                    <fullName>Turnkey System</fullName>
                    <default>true</default>
                    <label>Turnkey System</label>
                </value>
                <value>
                    <fullName>Upgrades</fullName>
                </value>
                <value>
                    <fullName>PV Direct</fullName>
                </value>
                <value>
                    <fullName>Design Only</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qtr_1st_SREC_produced_Date__c</fullName>
        <label>Qtr 1st SREC produced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qtr_Submitted_Date__c</fullName>
        <label>Qtr Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_Completed__c</fullName>
        <formula>IF(OR(MONTH(SFDC_Project_End_Date__c) = 1, MONTH(SFDC_Project_End_Date__c) = 2, MONTH(SFDC_Project_End_Date__c) = 3), &quot;Q1&quot;, IF(OR(MONTH(SFDC_Project_End_Date__c) = 4, MONTH(SFDC_Project_End_Date__c) = 5, MONTH(SFDC_Project_End_Date__c) = 6), &quot;Q2&quot;, 
IF(OR(MONTH(SFDC_Project_End_Date__c) = 7, MONTH(SFDC_Project_End_Date__c) = 8, MONTH(SFDC_Project_End_Date__c) = 9), &quot;Q3&quot;, 
IF(OR(MONTH(SFDC_Project_End_Date__c) = 10, MONTH(SFDC_Project_End_Date__c) = 11, MONTH(SFDC_Project_End_Date__c) = 12), &quot;Q4&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Status__c</fullName>
        <label>Racking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Defined</fullName>
                </value>
                <value>
                    <fullName>PO Placed</fullName>
                </value>
                <value>
                    <fullName>Borrego Received</fullName>
                </value>
                <value>
                    <fullName>Subcon. Received</fullName>
                </value>
                <value>
                    <fullName>Product On Site</fullName>
                </value>
                <value>
                    <fullName>Install In Progress</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Need to Order</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Partial Delivered</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Racking_Type__c</fullName>
        <label>Racking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SunFrame</fullName>
                </value>
                <value>
                    <fullName>Sunlink</fullName>
                </value>
                <value>
                    <fullName>On-Energy</fullName>
                </value>
                <value>
                    <fullName>Flush Mount</fullName>
                </value>
                <value>
                    <fullName>Flat Roof Tilt-Up</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
                <value>
                    <fullName>SRS</fullName>
                </value>
                <value>
                    <fullName>Unirac to L feet</fullName>
                </value>
                <value>
                    <fullName>1 layers of B-Line</fullName>
                </value>
                <value>
                    <fullName>2 layers of B-Line</fullName>
                </value>
                <value>
                    <fullName>Hybrid: B-Line to Unirac</fullName>
                </value>
                <value>
                    <fullName>ULA</fullName>
                </value>
                <value>
                    <fullName>Unirac Rapid Rack</fullName>
                </value>
                <value>
                    <fullName>PowerTilt</fullName>
                </value>
                <value>
                    <fullName>Tilt up</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Assigned_To__c</fullName>
        <label>Rebate Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Host Customer</fullName>
                </value>
                <value>
                    <fullName>System Owner</fullName>
                </value>
                <value>
                    <fullName>Borrego</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Sharp</fullName>
                </value>
                <value>
                    <fullName>Sunwize</fullName>
                </value>
                <value>
                    <fullName>Sun Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Date__c</fullName>
        <label>Rebate Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Discrepancy__c</fullName>
        <formula>Opportunity__r.Expected_Rebate__c - Final_Rebate_Amount__c</formula>
        <label>Rebate Discrepancy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Expected_Date__c</fullName>
        <description>Rebate section - rebate expected date.</description>
        <label>Rebate Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Id__c</fullName>
        <label>Rebate Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Notes__c</fullName>
        <label>Rebate Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_ProgramF__c</fullName>
        <description>Automatically populated from the associated Opportunity record Rebate Program field.</description>
        <formula>TEXT( Opportunity__r.Rebate_Program__c )</formula>
        <inlineHelpText>Automatically populated from the associated Opportunity record Rebate Program field.</inlineHelpText>
        <label>Rebate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Program__c</fullName>
        <label>Rebate Program-DONT USE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSI EPBB 2-Step</fullName>
                </value>
                <value>
                    <fullName>CSI EPBB 3-Step</fullName>
                </value>
                <value>
                    <fullName>CSI PBI 2-Step</fullName>
                </value>
                <value>
                    <fullName>CSI PBI 3-Step</fullName>
                </value>
                <value>
                    <fullName>NSHP</fullName>
                </value>
                <value>
                    <fullName>CPAU</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>Healdsburg</fullName>
                </value>
                <value>
                    <fullName>SMUD</fullName>
                </value>
                <value>
                    <fullName>AP&amp;T</fullName>
                </value>
                <value>
                    <fullName>CEC</fullName>
                </value>
                <value>
                    <fullName>CEC PBI</fullName>
                </value>
                <value>
                    <fullName>MTC SRI</fullName>
                </value>
                <value>
                    <fullName>MTC CS</fullName>
                </value>
                <value>
                    <fullName>CCEF</fullName>
                </value>
                <value>
                    <fullName>PA Sunshine</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other Program</fullName>
                </value>
                <value>
                    <fullName>MASH</fullName>
                </value>
                <value>
                    <fullName>MA Solar Stimulus</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Received_Date__c</fullName>
        <description>Rebate section - rebate received date.</description>
        <label>Rebate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Region__c</fullName>
        <label>Rebate Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>Southern CA</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Status__c</fullName>
        <label>Rebate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Mailed</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Payment Requested</fullName>
                </value>
                <value>
                    <fullName>Check being issued</fullName>
                </value>
                <value>
                    <fullName>Rebate Received</fullName>
                </value>
                <value>
                    <fullName>Follow Up Needed</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Rebate</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved_KW__c</fullName>
        <description>Rebate section - reserved KW.</description>
        <label>Reserved KW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <label>$ Reserved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Amount_Left_Feasibility__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of retainer that has already been invoiced that has not been used up yet by other charges.</description>
        <label>Retainer Amount Left (Feasibility)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Year__c</fullName>
        <label>Revenue Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>